# txt-

./: CMakeLists.txt  main.cpp
src/: main.cpp
src/editor/: Buffer.cpp  Buffer.h  Cursor.cpp  Cursor.h  Editor.cpp  Editor.h  Keys.h  TextManager.cpp  TextManager.h
src/editor/structures/: Node.cpp  Node.h  Row.cpp  Row.h
src/exceptions/app/: AppException.cpp  AppException.h
src/exceptions/terminal/: TerminalException.cpp  TerminalException.h
src/terminal/: Sequences.h  Terminal.cpp  Terminal.h  terminal.cpp  terminal.h
